# coure_work_5_SQL

./: README.md  pyproject.toml
data/: companies.json  database_example.ini
src/: class_DBManager.py  class_hh_api.py  class_vacancy.py  main.py  utils.py
